# CalcBusStopOccupLCL

./: CMakeLists.txt  MainForm.cpp  MainForm.h  README.md  main.cpp
libs/liblcl/: liblcl.c  liblcl.h
